--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
     <link rel="icon" href="%PUBLIC_URL%/icons/programmer.png" />
     <title>Bhavuk Sharma</title>
+    <script
+      src="https://kit.fontawesome.com/6b5c5a3a79.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
